<resources>
    <string name="app_name">Fake GPS Detector</string>
    <string name="title_home">Home</string>
    <string name="title_routers">Routers</string>
    <string name="title_celltowers">Cell towers</string>
    <string name="google_api_key">AIzaSyC95vnmTsAOfnAWpQjcnXdElVss7Dnr5IY</string>
    <string name="action_settings">Settings</string>

    <string name="permission_status_granted">Permissions are Granted</string>
    <string name="permission_status_denied">Permissions are Denied</string>

    <string name="gps_status_enabled">"GPS is Enabled"</string>
    <string name="gps_status_disabled">"GPS is Disabled"</string>
    <string name="gps_required_title">GPS Required</string>

    <string name="wifi_status_enabled">"WiFi is Enabled"</string>
    <string name="wifi_status_disabled">"WiFi is Disabled"</string>
    <string name="wifi_required_title">WiFi Required</string>

    <string name="permission_required_title">Proper Permissions Required</string>
    <string name="gps_required_body">Enable GPS for proper operation of the application</string>
    <string name="wifi_required_body">Enable WiFi for proper operation of the application</string>
    <string name="permission_required_body">Allow for proper operation of the application</string>

    <string name="click_to_retry"> (click to retry)</string>

    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="latlng">%.3f, %.3f</string>

    <string name="station_frequency">Frequency: %1$s MHz</string>
    <string name="station_level">Level: %1$s dBm</string>

    <string name="signal_strength">Level: %1$s dBm</string>

    <string name="cid_text">Cell ID: %1$s</string>
    <string name="lac_text">Location Area Code: %1$s</string>
    <string name="mcc_text">Mobile Country Code: %1$s</string>
    <string name="mnc_text">Mobile Network Code: %1$s</string>

    <string name="ssid_text">SSID: %1$s</string>
    <string name="mac_text">MAC Address: %1$s</string>

</resources>
