<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="56dp">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="-50dp"
        tools:context="com.example.fakegpsdetector.mapview.MapViewActivity"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/additional_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/gpsStatusDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/gps_status_disabled"
                android:textColor="@android:color/holo_red_light"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_conversion_absoluteHeight="22dp"
                tools:layout_conversion_absoluteWidth="409dp"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="872dp" />

            <TextView
                android:id="@+id/permissionStatusDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/permission_status_denied"
                android:textColor="@android:color/holo_red_light"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gpsStatusDisplay"
                tools:layout_conversion_absoluteHeight="0dp"
                tools:layout_conversion_absoluteWidth="0dp"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="500dp" />

            <TextView
                android:id="@+id/logitude_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_conversion_absoluteHeight="24dp"
                tools:layout_conversion_absoluteWidth="409dp"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="510dp" />

            <TextView
                android:id="@+id/longitude_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#2196F3"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_conversion_absoluteHeight="24dp"
                tools:layout_conversion_absoluteWidth="409dp"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="544dp" />

            <TextView
                android:id="@+id/latitude_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_conversion_absoluteHeight="24dp"
                tools:layout_conversion_absoluteWidth="409dp"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="578dp" />

            <TextView
                android:id="@+id/latitude_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#2196F3"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_conversion_absoluteHeight="24dp"
                tools:layout_conversion_absoluteWidth="409dp"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="612dp" />


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>